Add "toUri(java.nio.file.Path)" method in "org.springframework.context.support.WiktionaryGuiTest" class Update "testNotNull()" method in "org.springframework.context.support.WiktionaryGuiTest" class Use "java.nio.file.Path.of(java.lang.String,java.lang.String...)" method to replace usage of "java.nio.file.Paths.get(java.lang.String,java.lang.String...)" method